// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.P checkGrammar=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P checkGrammar=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P checkHighlight=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P checkHighlight=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P checkSpaces=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P checkSpaces=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P className="my-classname" 1`] = `
<p
  className="uu5-bricks-p my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P className="test-classname" 1`] = `
<p
  className="uu5-bricks-p test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P content="This is Content from ContentMixin" 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
>
  This is Content from ContentMixin
</p>
`;

exports[`UU5.Bricks.P content=12345 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
>
  12345
</p>
`;

exports[`UU5.Bricks.P controlled=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P controlled=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P default props 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P disabled=false 1`] = `
<p
  className="uu5-bricks-p"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P disabled=false 3`] = `
<p
  className="uu5-bricks-p"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P disabled=true 1`] = `
<p
  className="uu5-bricks-p"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P disabled=true 3`] = `
<p
  className="uu5-bricks-p"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P docKit examples UU5.Bricks.P should render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
>
  This is my custom Paragraph
</p>
`;

exports[`UU5.Bricks.P dynamic=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P dynamic=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P fullTextSearchPriority=0 1`] = `
<p
  className="uu5-bricks-p uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P fullTextSearchPriority=0 2`] = `
<p
  className="uu5-bricks-p uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P hidden=false 1`] = `
<p
  className="uu5-bricks-p"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P hidden=false 3`] = `
<p
  className="uu5-bricks-p"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P hidden=true 1`] = `
<p
  className="uu5-bricks-p"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P hidden=true 3`] = `
<p
  className="uu5-bricks-p"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.P id="myId" 1`] = `
<p
  className="uu5-bricks-p"
  id="myId"
/>
`;

exports[`UU5.Bricks.P id="test-id" 1`] = `
<p
  className="uu5-bricks-p"
  id="test-id"
/>
`;

exports[`UU5.Bricks.P ignoreHTML=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P ignoreHTML=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P mainAttrs=undefined 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P name="myName" 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P nestingLevel="box" 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P nestingLevel="inline" 1`] = `
<ForwardRef
  className="uu5-bricks-p"
  id="uuID"
  nestingLevel="inline"
  ref_={null}
/>
`;

exports[`UU5.Bricks.P noPrint=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P noPrint=true 1`] = `
<p
  className="uu5-bricks-p uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P selected=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P selected=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P style="padding:8px; borderRadius: 2px" 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.P style={"backgroundColor":"red","color":"blue"} 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.P style={"margin":8} 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.P textCorrector=false 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P textCorrector=true 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;

exports[`UU5.Bricks.P tooltip="My Tooltip" 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID"
/>
`;
